# Birza

./: Birza.cpp  Birza.h  CMakeLists.txt  Client.cpp  Common.hpp  README.md  Server.cpp
